@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.4 (pending)
 ==========================
 
+- Fixed moving blocks with multiple signal/slot connections
 - Disable insert graph widgets menu when no widgets available
 - Added missing directory option to the FileEntry edit widget
 - Fix editable combo box detection for returnPressed() event
